examples/test/testpolicy8192.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8192
  namespace: namespace88
spec:
  podSelector:
    matchLabels:
      key8: value1
      key16: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value7
      podSelector:
        matchLabels:
          key29: value6
          key5: value22
